<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    >

    <Button

        android:id="@+id/buttonReturn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:layout_alignEnd="@+id/username2"
        android:layout_margin="8dp"
        />
    <TextView
        android:id="@+id/username2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullnameClient"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/cairo_bold"
        android:paddingHorizontal="50dp"
        android:textColor="@color/white"
        android:paddingVertical="8dp"
        android:background="@color/protossPylon"
        />
    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_exit_to_app_black_24dp"
        android:layout_margin="5dp"
        />
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username2"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/storeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="0sp"
            android:layout_below="@id/totalDebt"
            android:layout_centerHorizontal="true"
            android:textColor="@color/picoVoid"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNewD"
            android:fontFamily="@font/cairo_bold"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/lname"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
             />
        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fnameEditTxt"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/fname"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            />
        <EditText
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lnameD"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/currentDebt"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            />
        <EditText
            android:id="@+id/currentDebit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="invisible"
            android:hint="@string/currendDedit"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/addNewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/coastalBreese"
            android:text="@string/addBtn"
            android:textSize="25sp"
            android:layout_marginTop="0dp"
            android:background="@drawable/custom_button"
android:enabled="false"
            />

    </LinearLayout>


</RelativeLayout>

