<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    >

    <Button
android:fontFamily="@font/cairo_bold"
        android:id="@+id/buttonReturn2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:layout_alignEnd="@+id/debtorName"
        android:layout_margin="8dp"
        />
    <TextView
        android:id="@+id/debtorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullnameClient"
        android:textSize="25sp"
        android:fontFamily="@font/cairo_bold"
        android:paddingHorizontal="50dp"
        android:textColor="@color/white"
        android:paddingVertical="8dp"
        android:background="@color/protossPylon"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/debtorName"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/debtorId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="0sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/picoVoid"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNewDb"
            android:fontFamily="@font/cairo_bold"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/productName"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            />
        <EditText
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/productNameE"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/currentDebt"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            />
        <EditText
            android:id="@+id/productDebtC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/currendDedit"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="35dp"
            android:layout_marginHorizontal="10dp">
        <Button
            android:id="@+id/uploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="35dp"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/white"
            android:text="@string/upload"
            android:fontFamily="@font/cairo_bold"
            android:padding="10dp"
            />

        <ImageView
            android:id="@+id/productImageView"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="40dp"

            />


        </LinearLayout>

        <Button
            android:id="@+id/addNewDebtButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/coastalBreese"
            android:text="@string/addBtn"
            android:textSize="25sp"
            android:background="@drawable/custom_button"
         android:enabled="false"

            />

    </LinearLayout>


</RelativeLayout>

