<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".EditProfile">

 <LinearLayout
     android:id="@+id/l1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">


     <Button
         android:id="@+id/buttonReturnProfile"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/ic_arrow_back_black_24dp"
         android:layout_margin="8dp"
         android:layout_gravity="end"
         />
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:id="@+id/idPic"
         android:src="@drawable/client"
         android:layout_gravity="center_horizontal"
         android:contentDescription="@string/debtorimage" />

     <TextView
         android:id="@+id/debtorNameProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/fullName"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/picoVoid"
         android:fontFamily="@font/cairo_bold"
         android:textSize="25sp"/>


 </LinearLayout>

    <RelativeLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/l1"
        android:background="@drawable/saw2"
        android:layout_marginVertical="20dp">


        <TextView
            android:id="@+id/debtedText"
            android:background="@color/statis1"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/Debted"
            android:textColor="@color/white"
            android:fontFamily="@font/cairo_bold"
            android:textSize="10sp"
            android:layout_marginTop="35dp"
            android:padding="20dp"
            android:textAlignment="center"
            android:layout_marginEnd="5dp"
            android:drawableTop="@drawable/ic_linear_scale_black_24dp"
            />


        <TextView
            android:id="@+id/noDebtText"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:fontFamily="@font/cairo_bold"
            android:textSize="13sp"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:text="@string/notDebted"
            android:padding="17dp"
            android:background="@color/statis2"
            android:drawableTop="@drawable/ic_linear_scale_black_24dp"

            />

        <TextView
            android:id="@+id/totalText"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/totaldebt"
            android:textSize="10sp"
            android:textAlignment="center"
            android:layout_marginStart="5dp"
            android:padding="20dp"
            android:background="@color/statis3"
            android:drawableTop="@drawable/ic_linear_scale_black_24dp"

            />

    </RelativeLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_above="@+id/storeName"
      android:gravity="center_horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/subsription"
          android:fontFamily="@font/cairo_bold"
          android:textSize="15sp"/>

      <TextView
          android:id="@+id/period"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text=""
          android:fontFamily="@font/cairo_bold"
          android:textSize="20sp"
          android:textColor="@color/picoVoid"
          android:textStyle="bold"/>

      <TextView
          android:id="@+id/months"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/days"
          android:fontFamily="@font/cairo_bold"
          android:textSize="15sp"/>

  </LinearLayout>

    <TextView
        android:id="@+id/storeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/store"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/l2"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/storeName"
        android:src="@drawable/store"
        android:contentDescription="@string/debtorimage"
        android:layout_marginBottom="10dp"/>


</RelativeLayout>

