<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
   >

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullnameClient"
android:gravity="center_horizontal"
        android:textSize="25sp"
        android:fontFamily="@font/baloo"
        android:paddingHorizontal="33dp"
        android:textColor="@color/white"
        android:paddingTop="6dp"
        android:paddingBottom="2dp"
        android:background="@color/protossPylon"
        />
    <Button

        android:id="@+id/buttonLogout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_exit_to_app_black_24dp"
        android:layout_margin="5dp"
        />


    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/client"
        android:contentDescription="@string/todo"
        android:layout_marginTop="75dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="19dp"/>

    <SearchView
        android:id="@+id/search"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_area_style"
        android:fontFamily="@font/baloo"
        android:layout_marginTop="75dp"
        android:layoutDirection="ltr"
       />

    <Button
        android:id="@+id/addNew"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_add_circle_black_24dp"
        android:textSize="25sp"
        android:layout_toEndOf="@id/search"
        android:layout_marginStart="5dp"
        android:layout_marginTop="75dp"/>



    <LinearLayout
        android:id="@+id/totalDebt"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@id/profile_pic"
        android:background="@drawable/text_area_full"
        android:paddingHorizontal="15dp"
        android:paddingVertical="1dp">
    <TextView
        android:id="@+id/example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totaldebt"
        android:textSize="18sp"
        android:fontFamily="@font/flat"
        android:padding="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debt"
        android:textSize="22sp"
        android:layout_marginHorizontal="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/cairo_bold"
        android:textColor="@color/carmin"/>
    </LinearLayout>
    <TextView
        android:id="@+id/idS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="0sp"
        android:layout_below="@id/totalDebt"
        android:layout_centerHorizontal="true"
        android:textColor="@color/picoVoid"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_below="@id/totalDebt"

        >
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        >

    </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>

